# how-not-to-cpp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: rationale.md  style-guide.md
examples/: exception_safety_who.cpp  impossible_api_usage.cpp  meson.build  thread_unsafety_demo.cpp
include/: everything.hpp  global_state_manager_singleton_factory.hpp  utilities_final_v2.hpp
src/: bool_parameter_hell.cpp  dangling_reference_showcase.cpp  inheritance_abuse.cpp  macros_are_templates_now.cpp  main.cpp  memory_leaks.cpp  meson.build  singleton_registry.cpp
tests/: meson.build  test_that_depends_on_execution_order.cpp
